# sgmusic

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code-style.yml  codeql-analysis.yml  documentation.yml  release.yml  tests.yml
Module-Reference/sgmusic/: index.html
docs/: index.md
docs/Module-Reference/: sgmusic.md
search/: search_index.json
sgmusic/: __init__.py
tests/: test_sgmusic.py
