[tool.poetry]
name = "sgmusic"
version = "0.1.0"
description = ""
authors = ["Sam Greening <samjg60@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
sympy = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
