[tool.poetry]
name = "sgmusic"
version = "0.1.4"
description = ""
authors = ["Sam Greening <samjg60@gmail.com>"]
readme = "README.md"
repository = "https://github.com/SG60/sgmusic"

[tool.poetry.dependencies]
python = ">=3.9,<4"
sympy = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
mypy = "^0.931"
hypothesis = {extras = ["cli"], version = "^6.36.2"}

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.4"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
